--- a/Classify/build.gradle
+++ b/Classify/build.gradle
@@ -6,7 +6,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
-
+//        compile fileTree(dir: 'libs', include: ['.*jar'])
+//        compile 'com.andriod.supprot:design:22.2.0'
+//        compile 'com.andriod.supprot:appcompat-v7:22.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
